unpackaged/main/default/objects/AiGroundingFileRefCustom__dlm/AiGroundingFileRefCustom__dlm.object-meta.xml
<CustomObject>
    <label>AiGroundingFileRefCustom__dlm</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>AiGroundingFileRefCustom__dlm</description>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>AiGroundingFileRefCustom__dlm</labelOverride>
        <masterLabel>AiGroundingFileRefCustom__dlm</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataModelAttributes>
</CustomObject>