unpackaged/main/default/objects/AiGroundingFileRefCustom__dlm/fields/FileSize__c.field-meta.xml
<CustomField>
    <fullName>FileSize__c</fullName>
    <label>File Size</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>File Size</labelOverride>
        <masterLabel>File Size</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>