unpackaged/main/default/objects/AiGroundingFileRefCustom__dlm/fields/GroundingSourceId__c.field-meta.xml
<CustomField>
    <fullName>GroundingSourceId__c</fullName>
    <label>Grounding Source</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Grounding Source</labelOverride>
        <masterLabel>Grounding Source</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>