unpackaged/main/default/objects/AiGroundingFileRefCustom__dlm/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>AI Grounding File Reference ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AI Grounding File Reference ID</labelOverride>
        <masterLabel>AI Grounding File Reference ID</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>