unpackaged/main/default/objects/AiGroundingFileRefCustom__dlm/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>AI Grounding File Reference Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AI Grounding File Reference Name</labelOverride>
        <masterLabel>AI Grounding File Reference Name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>